Fixed Layout Issues, Cleaned Code because I'm a dirty mess

--- a/css/master.css
+++ b/css/master.css
@@ -14,6 +14,21 @@ h1{
   padding: 3% 10%;
   background-color:	#2c2f33;
 }
+
+/* Title */
+/* style="border-left: solid 1px;border-right:solid 1px;" */
+
+/* About Me  */
+
+
+/* Skills */
+
 .table{
   background-color: #2c2f33;
+  border: solid 1px;
+  border-color: #FFF;
+}
+/* navigation bar  */
+.navbar{
+  padding: 0 0 4.5rem;
 }
